# fast-image-clustering

./: CMakeLists.txt  README.md
include/: Centroid.hpp  Image.hpp  KMeans.hpp  Vec3.hpp
src/: Centroid.cpp  Image.cpp  KMeans.cpp  Vec3.cpp  main.cpp
tests/: test_main.cpp
